# docs/swagger.json
@@ -26,6 +26,11 @@
     "paths": {
         "/config": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get the configuration of all fields, including mandatory fields and field order",
                 "consumes": [
                     "application/json"
@@ -44,6 +49,12 @@
                             "$ref": "#/definitions/main.FieldConfigResponse"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/main.ErrorResponse"
+                        }
+                    },
                     "405": {
                         "description": "Method Not Allowed",
                         "schema": {
@@ -55,6 +66,11 @@
         },
         "/process": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Upload a file and process it according to provided field mappings",
                 "consumes": [
                     "multipart/form-data"
@@ -119,6 +135,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/main.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/main.ErrorResponse"
                         }
@@ -195,6 +217,14 @@
                     "example": "Total Rows Processed: 1000 Successful Rows: 1000 Rows with Missing Data: 0"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "description": "API key authentication required for all API endpoints",
+            "type": "apiKey",
+            "name": "X-API-Key",
+            "in": "header"
         }
     }
 }
